[gd_scene load_steps=9 format=2]

[ext_resource path="res://contents/entities/static_buyant_post/t_post_a.png" type="Texture" id=1]
[ext_resource path="res://contents/entities/static_buoyant/base_static_buoyant.tscn" type="PackedScene" id=2]
[ext_resource path="res://contents/entities/static_buyant_post/static_buoyant_post.gd" type="Script" id=3]
[ext_resource path="res://contents/systems/button_prompt/button_prompt.tscn" type="PackedScene" id=4]
[ext_resource path="res://contents/entities/static_buyant_post/proximity_loop.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 131.548

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotate"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="StaticBuoyantPost" groups=["town"] instance=ExtResource( 2 )]
collision_layer = 6
collision_mask = 9
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "rotate"
anims/RESET = SubResource( 2 )
anims/rotate = SubResource( 3 )

[node name="ButtonPrompt" parent="." index="3" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -184 )
scale = Vector2( 4, 4 )
frame = 1
action_name = "interact"

[node name="SinkTween" type="Tween" parent="." index="4"]

[node name="ProximitySFX" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 5 )
volume_db = -9.0
autoplay = true
bus = "Sfx"

[connection signal="tween_all_completed" from="SinkTween" to="." method="_on_SinkTween_tween_all_completed"]
[connection signal="tween_step" from="SinkTween" to="." method="_on_SinkTween_tween_step"]
[connection signal="finished" from="ProximitySFX" to="." method="_on_ProximitySFX_finished"]
